--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
                 <menu class="omenu"
                 id="imenu">
                 <ul>
-                    <li>Home</li>
-                    <li>Sobre</li>
-                    <li>fabricante</li>
-                    <li>contato</li>
+                    <a href="index.html"> <li>Home</li> </a>
+                    <a href="subPag/fabricante.html"><li>fabricante</li></a>
+                    <a href="subPag/contato.html"> <li>contato</li> </a>
+                    <a href="subPag/credito.html"> <li>Créditos</li> </a>
+                    <a href="subPag/sobre.html"> <li>Sobre</li> </a>
                 </ul>
             </menu>
     </header>
@@ -42,14 +43,14 @@
                         <strong>Silêncio e Conforto Acústico</strong><br>
                             Os motores elétricos funcionam de maneira extremamente silenciosa, o que proporciona uma experiência de condução mais confortável e agradável, especialmente em ambientes urbanos. A ausência de ruídos mecânicos reduz o estresse auditivo, criando um ambiente mais tranquilo dentro do veículo, o que é uma vantagem significativa em relação aos carros a combustão.
                     </p>
-                    <img src="Imagens/jac.jpg" alt="Carro eletricos da JAC">
+                    <img src="Imagens/jac.jpg" alt="Carro eletricos da JAC" class="JAC">
                     <h2>Impacto Ambiental Positivo</h2>
 
-
+<div>
 <p class="ambiental">
     Uma das principais vantagens dos carros elétricos é que, por não utilizarem combustíveis fósseis, eles produzem zero emissões de poluentes. Isso ajuda a reduzir a poluição do ar, contribuindo diretamente para a melhoria da qualidade de vida nas cidades e para o combate às mudanças climáticas. Esse fator torna os veículos elétricos uma escolha mais sustentável para o futuro do transporte.
 </p>
-                    <img src="Imagens/arvore2.jpg" alt="ecologia" class="imgG">
+                    <img src="Imagens/arvore2.jpg" alt="ecologia" class="imgG" id="arvore"></div>
 
                     <h2>Eficiência Energética</h2>
 
@@ -58,15 +59,15 @@
     Os carros elétricos também são mais eficientes em termos energéticos. Enquanto os motores a combustão convertem apenas uma parte da energia do combustível em movimento, desperdiçando o restante em forma de calor, os motores elétricos conseguem utilizar a maior parte da energia elétrica para gerar movimento. Isso se traduz em um desempenho mais eficiente, além de uma autonomia que tende a melhorar com o avanço das tecnologias de baterias.
 </p>
 
-<img src="Imagens/lampada.webp" alt="lampada"class="imgG">
+<img src="Imagens/lampada.webp" alt="lampada"class="imgG" id="lampada">
 
-
+<div class="custos">
 <h2>Menor Custo de Manutenção</h2>
 
 
 <p class="custo">
     Outra vantagem importante dos veículos elétricos é a manutenção mais simples e barata. Como possuem menos peças móveis e não exigem trocas regulares de óleo, os carros elétricos sofrem menos desgaste e necessitam de menos manutenção ao longo do tempo. Isso pode gerar uma economia significativa para os proprietários, especialmente em comparação com os custos recorrentes de manutenção de carros a combustão
-    .</p>
+    .</p></div>
 
 <h2>Incentivos e Benefícios Econômicos</h2>
 
@@ -78,9 +79,21 @@
 
 
 
-<img src="Imagens/incentivo.webp" alt="incentivo $"class="imgG">
+<img src="Imagens/incentivo.webp" alt="incentivo $"class="imgG" id="incentivo">
 
-        </article>
-    </main>
+        
+   
+
+
+
+
+</article>
+ </main>
+<footer>
+    Site ficticio para fins de estudo
+</footer> 
 </body>
+
+
 </html>
+
