--- a/subPag/contato.html
+++ b/subPag/contato.html
@@ -23,23 +23,65 @@
         </ul>
     </menu>
     </header>
-    <main>
-        <article>
-            <p>Olá quer entrar em contato comigo ? aqui estao  minhas redes sociais para voce da uma olhada </p>
-                <a href="https://www.instagram.com/amara_siqueira20/" target="_blank">
-                    <img src="../Imagens/instagram-logo.webp" alt="insta-link" class="imgIC">
-                </a>
-                <a href="https://github.com/Amara-Siqueira" target="_blank">
-                    <img src="../Imagens/logo-gh.jfif" alt="logo-Git-hub" class="imgIC">
-                </a>
-                <a href="https://www.linkedin.com/in/amara-siqueira-160405223/" target="_blank">
-                    <img src="../Imagens/logo-linkedin.jfif" alt="logo_linkedin" class="imgIC">
-                </a>
+    <main class="V=main">
+        <p>Olá quer entrar em contato comigo ? aqui estao  minhas redes sociais para voce da uma olhada </p>
+
+        <article class="v-card"> 
+            <div class="v-card_content">
+                <h1 class="v=card_titulo">
+                    instagram
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto dolores alias eligendi. Commodi consectetur quas dignissimos accusantium quisquam necessitatibus blanditiis aperiam, consequuntur ullam molestias aspernatur id, molestiae ab et.
+                </p>
+                <a href="#"> <button class="v-butao"> Ir para instagram</button></a>
+            </div>
         </article>
-    </main>
+
+        <article class="v-card"> 
+            <div class="v-card_content">
+                <h1 class="v=card_titulo">
+                    gitHub
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto dolores alias eligendi. Commodi consectetur quas dignissimos accusantium quisquam necessitatibus blanditiis aperiam, consequuntur ullam molestias aspernatur id, molestiae ab et.
+                </p>
+                <a href="#"> <button class="v-butao"> Ir para GitHub</button></a>
+            </div>
+        </article>
+
+        <article class="v-card"> 
+            <div class="v-card_content">
+                <h1 class="v=card_titulo">
+                    linkedIn
+                </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto dolores alias eligendi. Commodi consectetur quas dignissimos accusantium quisquam necessitatibus blanditiis aperiam, consequuntur ullam molestias aspernatur id, molestiae ab et.
+                </p>
+                <a href="#"> <button class="v-butao"> Ir para linkedIn</button></a>
+            </div>
+        </article>
+        <ul class="v-menu"></ul>
+            <li class="menu">
+                <button class="insta">
+
+                </button>
+            </li>
+            <li class="menu">
+                <button class="gt">
+
+                </button>
+            </li>
+            <li class="menu">
+                <button class="linkedIn">
+
+                </button>
+            </li>
+           
+       </main>
     <footer>
         Site ficticio para fins de estudo
     </footer> 
     </body>
     </html>
-</header>
+
