--- a/subPag/contato.html
+++ b/subPag/contato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../styleV-Card.css">
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
    <title>Contato</title>
    </head>
@@ -23,13 +23,13 @@
         </ul>
     </menu>
     </header>
-    <main class="V=main">
+    <main class="V-main">
         <p>Olá quer entrar em contato comigo ? aqui estao  minhas redes sociais para voce da uma olhada </p>
 
-        <article class="v-card"> 
+        <article class="v-card "id="instagram"> 
             <div class="v-card_content">
-                <h1 class="v=card_titulo">
-                    instagram
+                <h1 class="v-card_titulo">
+                    Instagram
                 </h1>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto dolores alias eligendi. Commodi consectetur quas dignissimos accusantium quisquam necessitatibus blanditiis aperiam, consequuntur ullam molestias aspernatur id, molestiae ab et.
@@ -38,9 +38,9 @@
             </div>
         </article>
 
-        <article class="v-card"> 
+        <article class="v-card "id="github"> 
             <div class="v-card_content">
-                <h1 class="v=card_titulo">
+                <h1 class="v-card_titulo">
                     gitHub
                 </h1>
                 <p>
@@ -50,9 +50,9 @@
             </div>
         </article>
 
-        <article class="v-card"> 
+        <article class="v-card " id="linkedin"> 
             <div class="v-card_content">
-                <h1 class="v=card_titulo">
+                <h1 class="v-card_titulo">
                     linkedIn
                 </h1>
                 <p>
@@ -63,18 +63,16 @@
         </article>
         <ul class="v-menu"></ul>
             <li class="menu">
-                <button class="insta">
-
+                <button class="insta"> 1
                 </button>
             </li>
             <li class="menu">
                 <button class="gt">
-
+                 2
                 </button>
             </li>
             <li class="menu">
-                <button class="linkedIn">
-
+                <button class="linkedIn"> 3
                 </button>
             </li>
            
