--- a/subPag/contato.html
+++ b/subPag/contato.html
@@ -61,21 +61,21 @@
                 <a href="#"> <button class="v-butao"> Ir para linkedIn</button></a>
             </div>
         </article>
-        <ul class="v-menu"></ul>
+        <ul class="v-menu">
             <li class="menu">
-                <button class="insta"> 1
+                <button class="insta"> <img src="../Imagens/instagram.png" alt="">
                 </button>
             </li>
             <li class="menu">
                 <button class="gt">
-                 2
+                 <img src="../Imagens/github.png" alt="">
                 </button>
             </li>
             <li class="menu">
-                <button class="linkedIn"> 3
+                <button class="linkedIn"><img src="../Imagens/linkedin.png" alt="">
                 </button>
             </li>
-           
+           </ul>
        </main>
     <footer>
         Site ficticio para fins de estudo
