--- a/subPag/contato.html
+++ b/subPag/contato.html
@@ -24,62 +24,49 @@
     </menu>
     </header>
     <main class="V-main">
-        <p>Olá quer entrar em contato comigo ? aqui estao  minhas redes sociais para voce da uma olhada </p>
-
-        <article class="v-card "id="instagram"> 
-            <div class="v-card_content">
-                <h1 class="v-card_titulo">
-                    Instagram
-                </h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto dolores alias eligendi. Commodi consectetur quas dignissimos accusantium quisquam necessitatibus blanditiis aperiam, consequuntur ullam molestias aspernatur id, molestiae ab et.
-                </p>
-                <a href="#"> <button class="v-butao"> Ir para instagram</button></a>
+        <div class="v-card">
+        <!--imagemms-->
+            <div class="v-card1" id="v-card1" >
+               <div class="img"></div> <!--linkdin-->
+                <div class="button">
+                    <p>Visite meu LinkedIn </p>
+                    <button class="b-lID">
+                        Ir para o LinkedIn
+                    </button>
+                </div>
+                
+            <div class="v-cad2" id="v-card2">
+                <div class="insta-card">
+                    <p>Visite meu Instagram</p>
+                    <div class="button">
+                        <button class="b-IST">
+                            Ir para o Instagram
+                        </button>
+                    </div>
             </div>
-        </article>
+         </div>
 
-        <article class="v-card "id="github"> 
-            <div class="v-card_content">
-                <h1 class="v-card_titulo">
-                    gitHub
-                </h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto dolores alias eligendi. Commodi consectetur quas dignissimos accusantium quisquam necessitatibus blanditiis aperiam, consequuntur ullam molestias aspernatur id, molestiae ab et.
-                </p>
-                <a href="#"> <button class="v-butao"> Ir para GitHub</button></a>
-            </div>
-        </article>
+                <div class="github">
+                    <p class="GH"> Visite meu GitHub  </p>
+                    <div class="button">      
+                    <button class="b-GH">
+                     Ir para o GitHub
+                    </button>
+                    </div>
 
-        <article class="v-card " id="linkedin"> 
-            <div class="v-card_content">
-                <h1 class="v-card_titulo">
-                    linkedIn
-                </h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus iusto dolores alias eligendi. Commodi consectetur quas dignissimos accusantium quisquam necessitatibus blanditiis aperiam, consequuntur ullam molestias aspernatur id, molestiae ab et.
-                </p>
-                <a href="#"> <button class="v-butao"> Ir para linkedIn</button></a>
+                </div>
             </div>
-        </article>
-        <ul class="v-menu">
-            <li class="menu">
-                <button class="insta"> <img src="../Imagens/instagram.png" alt="">
-                </button>
-            </li>
-            <li class="menu">
-                <button class="gt">
-                 <img src="../Imagens/github.png" alt="">
-                </button>
-            </li>
-            <li class="menu">
-                <button class="linkedIn"><img src="../Imagens/linkedin.png" alt="">
-                </button>
-            </li>
-           </ul>
-       </main>
+    </div>   
+
+
+
+
+
+    </main>
     <footer>
         Site ficticio para fins de estudo
     </footer> 
     </body>
+    <script src="js/index.js"></script>
     </html>
 
